fix: button tag color in dark mode

--- a/src/style/mixins.styl
+++ b/src/style/mixins.styl
@@ -102,7 +102,9 @@ button-colors($foreground, $background)
     background $foreground
     color $background
     if $background is transparent
-      color $md-white
+      color $vue-ui-color-light
+      .vue-ui-dark-mode &
+        color $vue-ui-color-dark !important
   &::before
     background $background
 
